@@ -81,6 +81,7 @@ for rendering.
 .TP
 .BI \-k \ keys
 Emulate sequence of keystrokes upon start-up.
+If the keystrokes end with 'q', the program operates in batch mode.
 .
 .TP
 .B \-v
