@@ -101,6 +101,7 @@ Preload file in memory to simulate memory-mapping.
 .TP
 .BI \-k \ keys
 Emulate sequence of keystrokes upon start-up.
+If the keystrokes end with 'q', the program operates in batch mode.
 .
 .TP
 .B \-v
